# cf_etl

./: .env.sample  .gitignore  LICENSE  README.md  README.rst  count_match.py  crp.py  nimsp.py  pyproject.toml  requirements.txt  setup.py
crp/: __init__.py  extractor.py  loader.py  matched.py  transformer.py
nimsp/: __init__.py  api.py  extractor.py  loader.py  matched.py  transformer.py
src/cf_etl/: crp_script.py  nimsp_script.py
src/cf_etl/crp/: __init__.py  extract.py  match.py  transform.py
src/cf_etl/nimsp/: __init__.py  api.py  extract.py  match.py  transform.py
src/cf_etl/queries/: election_candidates.sql  finsource_candidates.sql
